fix typo in appspec

--- a/appspec.yml
+++ b/appspec.yml
@@ -4,6 +4,6 @@ files:
   - source: /
     destination: /media/efs/platform-test/acadia2-0916/
 hooks:
-  - AfterInstall:
-      - location: /media/efs/scripts/fixperms.sh
-        timeout: 180
+  AfterInstall:
+    - location: /media/efs/scripts/fixperms.sh
+      timeout: 180
